--- a/deployment/configs/mnist-sampling.yaml
+++ b/deployment/configs/mnist-sampling.yaml
@@ -7,7 +7,7 @@ workerPoolSpecs:
   containerSpec:
     imageUri: "gcr.io/learnagentspace/text-diffusion:latest"
     command: ["python", "-m", "src.mnist"]
-    args: ["--sample", "--ckpt", "gs://text-diffusion/diffusion/checkpoints/image-model.pth", "--n", "10"]
+    args: ["--sample", "--ckpt", "gs://text-diffusion/diffusion/outputs/model/image-model.pth"]
 baseOutputDirectory:
   outputUriPrefix: "gs://text-diffusion/diffusion/outputs"
 enableWebAccess: false
